Bug 112893 - Pivot table: filtering of error item is not imported from XLSX
Summary: Pivot table: filtering of error item is not imported from XLSX
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
6.0.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: Tamás Zolnai
URL:
Whiteboard: target:6.0.0
Keywords:
Depends on:
Blocks: Pivot-Table-XLSX
  Show dependency treegraph
 
Reported: 2017-10-05 11:11 UTC by Tamás Zolnai
Modified: 2019-03-08 00:56 UTC (History)
0 users

See Also:
Crash report or crash signature:


Attachments
Pivot field with a filtering of an error item (12.17 KB, application/vnd.openxmlformats-officedocument.spreadsheetml.sheet)
2017-10-05 11:20 UTC, Tamás Zolnai
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Tamás Zolnai 2017-10-05 11:11:50 UTC
Description:
A pivot field items can be calculated values (e.g. formulas) and as such it can be an errornous formula (e.g. div by zero). This error values are displayed as error strings in the pivot table. In the attached test document the row field ("b") is filtered on the "#DIV/0!" item, but LO Calc does not import this filtering.

Steps to Reproduce:
1. Open attached test document in Calc
2. Check the row field ("b") items, "#DIV/0!" should be hidden (filtered out)

Actual Results:  
Filtering is not imported.

Expected Results:
Filtering should be imported.


Reproducible: Always

User Profile Reset: No

Additional Info:


User-Agent: Mozilla/5.0 (Windows NT 6.3; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/61.0.3163.100 Safari/537.36
Comment 1 Tamás Zolnai 2017-10-05 11:20:17 UTC
Created attachment 136778 [details]
Pivot field with a filtering of an error item
Comment 2 Commit Notification 2017-10-05 15:56:12 UTC
Tamás Zolnai committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=9fa34e9f2cebe2cfc551668f2a67ddcb799d3fb8

tdf#112893: Pivot table: filtering of error item is not imported

It will be available in 6.0.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.