tdf#112893: Pivot table: filtering of error item is not imported

... from XLSX

Change-Id: Ib155852e5f0718f41e02596d1042513286c6d845